[energymanager] ESS not mandatory